--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,9 +5,13 @@
  :root {
    scroll-behavior: smooth;
  }
+
+ *{
+  font-size: 14px;
+ }
  
  body {
-  
+   
    background: #f6f9ff;
    color: #444444;
  }
@@ -36,9 +40,9 @@
  # Main
  --------------------------------------------------------------*/
  #main {
-  font-family:'Montserrat', sans-serif;
+  font-family:'Nunito', sans-serif;
    margin-top: 60px;
-   padding: 20px 30px;
+   padding: 20px 20px;
    transition: all 0.3s;
  }
  @media (max-width: 1199px) {
@@ -234,7 +238,7 @@
  }
  .card-title span {
    color: #899bbd;
-   font-size: 14px;
+   font-size: 12px;
    font-weight: 400;
  }
  .card-body {
@@ -249,7 +253,7 @@
  .alert-heading {
    font-weight: 500;
    font-family: "Poppins", sans-serif;
-   font-size: 20px;
+   font-size: 14px;
  }
  
  /* Close Button */
@@ -287,12 +291,12 @@
  .accordion-flush .accordion-body {
    padding: 0 0 15px 0;
    color: #3e4f6f;
-   font-size: 15px;
+   font-size: 12px;
  }
  
  /* Breadcrumbs */
  .breadcrumb {
-   font-size: 14px;
+   font-size: 12px;
    font-family: "Montserrat", sans-serif;
    color: #899bbd;
    font-weight: 500;
@@ -434,7 +438,7 @@
    padding: 0;
  }
  .header-nav .nav-icon {
-   font-size: 20px;
+   font-size: 14px;
    color: #012970;
  }
  .header-nav .nav-profile {
@@ -522,7 +526,7 @@
    padding-bottom: 0;
  }
  .header-nav .profile .dropdown-header h6 {
-   font-size: 18px;
+   font-size: 14px;
    margin-bottom: 0;
    font-weight: 600;
    color: #444444;
@@ -552,7 +556,7 @@
    top: 60px;
    left: 0;
    bottom: 0;
-   width: 260px;
+   width: 235px;
    z-index: 996;
    transition: all 0.3s;
    padding: 20px;
@@ -564,7 +568,7 @@
  }
  @media (max-width: 1199px) {
    .sidebar {
-     left: -260px;
+     left: -235px;
    }
  }
  .sidebar::-webkit-scrollbar {
@@ -578,7 +582,7 @@
  
  @media (min-width: 1200px) {
    #main, #footer {
-     margin-left: 260px;
+     margin-left: 235px;
    }
  }
  @media (max-width: 1199px) {
@@ -618,7 +622,7 @@
  .sidebar-nav .nav-link {
    display: flex;
    align-items: center;
-   font-size: 15px;
+   font-size: 14px;
    font-weight: 600;
    color: #4154f1;
    transition: 0.3;
@@ -834,8 +838,8 @@
  }
 
  .dataTables_wrapper {
-  font-family: "Montserrat", sans-serif;
-  font-size: 16px;
+  font-family: "Nunito", sans-serif;
+  font-size: 14px;
   }
   th{
     font-weight: 600;
